# gazetteer

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: workflow.yml
gazetteer/: KD_Tree.py  __init__.py  reverse_geocode.py
gazetteer/tests/: test_gazetter.py
